--- a/TripSharing.API/Pages/_ViewImports.cshtml
+++ b/TripSharing.API/Pages/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using TripSharing
-@namespace TripSharing.Pages
+﻿@namespace TripSharing.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
